5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1846_1279.log
== SUBMITION (2019-06-24 19:49:35) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
        xtab = xtab-1
    # Move personagem para DIREITA
    elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
    elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
    elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- EXECUTION TIME:
0.905087
-- ERROR:
  File "/home/codebench/codes/1846/1279/main.py", line 28
    elif x == 'D':
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:50:07) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
        xtab = xtab-1
    # Move personagem para DIREITA
    elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
    elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
    elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:50:41) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
        xtab = xtab-1
    # Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
   elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:52:08) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
        xtab = xtab-1
    # Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
   elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:52:34) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
      xtab = xtab-1
    # Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
   elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:53:00) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
      xtab = xtab-1
    # Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
   elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:53:17) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
      xtab = xtab-1
    # Move personagem para DIREITA
		elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
   	elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   	elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:53:28) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
      xtab = xtab-1
    # Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
   elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:53:42) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
     	xtab = xtab-1
    # Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
   elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:54:02) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
     	xtab = xtab-1
	# Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
   elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:54:20) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
     	xtab = xtab-1
	# Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
	elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1

    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda+1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:55:57) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
		xtab = xtab-1
	# Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
	elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1
    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
      # Apaga moeda do tabuleiro
      tabuleiro[ytab,xtab] = 0
    # Zumbi
    elif tabuleiro[ytab,xtab] == 22:
      life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 26
    xtab = xtab-1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:56:25) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
		xtab = xtab-1
	# Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
	elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1
    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
      # Apaga moeda do tabuleiro
      tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 26
    xtab = xtab-1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:56:39) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
		xtab = xtab-1
	# Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
	elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1
    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
      # Apaga moeda do tabuleiro
      tabuleiro[ytab,xtab] = 0
    	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.720472
-- ERROR:
  File "/home/codebench/codes/1846/1279/main.py", line 26
    xtab = xtab-1
                ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:56:43) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
		xtab = xtab-1
	# Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
	elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1
    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
      # Apaga moeda do tabuleiro
      tabuleiro[ytab,xtab] = 0
    	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 26
    xtab = xtab-1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:57:07) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
		xtab = xtab-1
	# Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
	elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1
    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
      # Apaga moeda do tabuleiro
      tabuleiro[ytab,xtab] = 0
    	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 26
    xtab = xtab-1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:57:08) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
		xtab = xtab-1
	# Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
	elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1
    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
      # Apaga moeda do tabuleiro
      tabuleiro[ytab,xtab] = 0
    	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 26
    xtab = xtab-1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:48:41) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
   if x == 'A':
		xtab = xtab-1
	# Move personagem para DIREITA
	elif x == 'D':
     	xtab = xtab+1
    # Move personagem para CIMA
	elif x == 'W':
      ytab = ytab+1
    # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab-1
    # Trata evento
    # Moeda
   if tabuleiro[ytab,xtab] == 11:
		moeda = moeda+1
      # Apaga moeda do tabuleiro
      tabuleiro[ytab,xtab] = 0
    	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.822686
-- ERROR:
  File "/home/codebench/codes/1846/1279/main.py", line 26
    xtab = xtab-1
                ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
